--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: pocbdstreamlit.azurecr.io/aspcoresample:${{ github.sha }}
+        tags: pocbdstreamlit.azurecr.io/streamlitdocker:${{ github.sha }}
         file: Dockerfile
