--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 altair==5.1.2
 attrs==23.1.0
+azure-common==1.1.28
+azure-core==1.29.5
+azure-identity==1.15.0
+azure-keyvault==4.2.0
+azure-keyvault-certificates==4.7.0
+azure-keyvault-keys==4.8.0
+azure-keyvault-secrets==4.7.0
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==41.0.6
 databricks-sql-connector==3.0.0
 et-xmlfile==1.1.0
 gitdb==4.0.11
 GitPython==3.1.40
 idna==3.4
 importlib-metadata==6.8.0
+isodate==0.6.1
 Jinja2==3.1.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.1
@@ -18,17 +28,22 @@ lz4==4.3.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mdurl==0.1.2
+msal==1.25.0
+msal-extensions==1.0.0
 numpy==1.26.2
 oauthlib==3.2.2
 openpyxl==3.1.2
 packaging==23.2
 pandas==2.1.3
 Pillow==10.1.0
+portalocker==2.8.2
 protobuf==4.25.1
 py4j==0.10.9.7
 pyarrow==14.0.1
+pycparser==2.21
 pydeck==0.8.1b0
 Pygments==2.17.2
+PyJWT==2.8.0
 pyspark==3.5.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
